--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,9 @@
         "ext-dom": "*",
         "ext-xml": "*",
         "ext-mbstring": "*",
-        "psr/log": "^1.0 || ^2.0 || ^3.0",
+        "psr/log": "^1.0 || ^2.0 || ^3.0 || ^4.0 || ^5.0",
         "masterminds/html5": "^2.0",
-        "league/uri": "~6.7.2"
+        "league/uri": "~7"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
